--- a/area-do-usuario.html
+++ b/area-do-usuario.html
@@ -10,28 +10,40 @@
 <body id="usuario">
     <header>
         <nav>
-            <span class="logo-txt">
-                <img class="logo" src="imagens/logo.png" alt="logo">
-                <p>Residencial Cenarium</p>
+            <span class="logo">
+                <img class="logo-img" src="imagens/logo.png" alt="logo">
+                <p class="logo-txt">Residencial Cenarium</p>
             </span>
-            <a href="index.html">Home</a>
-            <a href="quem-somos.html">Quem somos</a>
-            <a href="galeria.html">Galeria</a>
-            <a href="contato.html">Contato</a>
-            <a href="area-do-usuario.html">Área do usuário</a>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="quem-somos.html">Quem somos</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="area-do-usuario.html">Área do usuário</a></li>
+            </ul>
         </nav>
     </header>
   
     <main>  
         <section class="usuario">
-            <img src="imagens/breve4.png" alt="em breve">
+            <!-- <img src="imagens/breve4.png" alt="em breve"> -->
+            <picture>
+                <source media="(max-width: 768px)" srcset="imagens/breve3.png" type="image/png">
+                <img src="imagens/breve4.png" alt="Foto do empreendimento">
+            </picture>
         </section>
     </main>
 
    <footer>
     <div class="final">
         <span class="texto-a-esquerda">
-        <p>Termos de uso &nbsp | &nbsp Política de privacidade</p>
+        <p>Nossa política de privacidade</p>
         </span>
         <img class="logo-rodape" src="imagens/logo.png" alt="logo">
         <span class="texto-a-direita">
@@ -39,5 +51,8 @@
         </span>
     </div>
    </footer>
+
+   <script src="script.js"></script>
+
 </body>
 </html>
