--- a/galeria.html
+++ b/galeria.html
@@ -10,15 +10,23 @@
 <body>
     <header>
         <nav>
-            <span class="logo-txt">
-                <img class="logo" src="imagens/logo.png" alt="logo">
-                <p>Residencial Cenarium</p>
+            <span class="logo">
+                <img class="logo-img" src="imagens/logo.png" alt="logo">
+                <p class="logo-txt">Residencial Cenarium</p>
             </span>
-            <a href="index.html">Home</a>
-            <a href="quem-somos.html">Quem somos</a>
-            <a href="galeria.html">Galeria</a>
-            <a href="contato.html">Contato</a>
-            <a href="area-do-usuario.html">Área do usuário</a>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="quem-somos.html">Quem somos</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="area-do-usuario.html">Área do usuário</a></li>
+            </ul>
         </nav>
     </header>
   
@@ -184,7 +192,7 @@
    <footer>
     <div class="final">
         <span class="texto-a-esquerda">
-        <p>Termos de uso &nbsp | &nbsp Política de privacidade</p>
+        <p>Nossa política de privacidade</p>
         </span>
         <img class="logo-rodape" src="imagens/logo.png" alt="logo">
         <span class="texto-a-direita">
@@ -192,5 +200,8 @@
         </span>
     </div>
    </footer>
+
+   <script src="script.js"></script>
+
 </body>
 </html>
