--- a/galeria.html
+++ b/galeria.html
@@ -31,10 +31,9 @@
     </header>
   
     <main>  
-        <p class="texto-galeria">Confira alguns itens da nossa área de lazer! 
-        </p>
+        <h2 class="galeriah2">Imagine<span>-se</span></h2>
 
-        <section class="icos">
+        <section class="icos-galeria">
         <div class="fotos">
             <img src="imagens/ico-tennis.png" alt="foto1">
         </div>
@@ -60,7 +59,7 @@
         </div> 
         </section>
 
-        <h2 class="segundoh2">Galeria</h2>
+        <!-- <h2 class="segundoh2">Galeria</h2> -->
 
         <section class="container-galeria">
             <a class="item-galeria w-2" href="#image1">
