--- a/quem-somos.html
+++ b/quem-somos.html
@@ -31,15 +31,23 @@
     </header>
   
     <main>  
-        <section class="paralax2">
+        <section class="somos">
             <h3>Somos terra...</h3>
-            <p class="um">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae beatae esse amet sit voluptatibus? Dolores, dicta a? Architecto modi quos illum vero quidem minus natus error magnam in?
+            <p class="um">Desde sua concepção, Cenarium cresce preservando suas características mais preciosas. Um tesouro natural que remete a nossas raízes a partir do primeiro passo, do primeiro contato com sua exuberância.  
+            É um lugar, um estilo, um modo de viver com consciência.
             </p>
 
-            <p class="dois">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae beatae esse amet sit voluptatibus? Dolores, dicta a? Architecto modi quos illum vero quidem minus natus error magnam in?
+            <p class="dois">Somos integração, sustentabilidade e conservação. Somos biodiversos, somos respeito, amamos a terra.
+            Temos a grata responsabilidade de unir, fortalecer e conscientizar nossos pares sobre a importância dessa relação ecológica.
+            Tornar pessoas melhores transforma o mundo.
             </p>
 
-            <p class="tres">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae beatae esse amet sit voluptatibus? Dolores, dicta a? Architecto modi quos illum vero quidem minus natus error magnam in?
+            <p class="tres">Cenarium é singular.
+            Conheça nossas práticas, entre em contato e venha viver em perfeito equilíbrio, cultivando paz e harmonia e tornando-se parte desse universo de amor a vida.
+            Aqui não construímos muros.
+            Aqui…nos cercamos de natureza.
+            Aqui, não somos tudo.
+            Somos parte de um todo.
             </p>
         </section>
     </main>
