--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
             <div>
                 <form class="formulario" action="https://formsubmit.co/70fb3d4e7aa3cf114d9fb845699a1d01" method="POST">
                     <h4>Contato</h4>
-                    <p>Entre em contato e fique por dentro das novidades! 
+                    <p>Entre em contato para obter  informações e ficar por dentro das novidades!
                     </p>
                     <span>
                         <input type="text" class="inp" name="name" placeholder="Nome" required>
