--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
             <picture class="cenarium">
                 <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                <img src="imagens/foto-principal.jpg" alt="Foto do empreendimento">
+                <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
             </picture>
     
             <h1>Inspire<span>-se</span></h1>
@@ -49,7 +49,7 @@
                 Um lugar de inspiração…
                 e de respeito a natureza.
                 </p>
-                <img class="bola1"src="imagens/bola3.jpeg" alt="">
+                <img class="bola1"src="imagens/bola3.jpg" alt="">
             </div>
 
             <div class="bolas">
@@ -109,7 +109,7 @@
     <div class="localizacao">
         
         <span class="endereco">
-        <p>Como chegar <br>
+        <p>Como chegar: <br>
         Endereço: Estrada Municipal Atílio Squizato, 3519 - Jarinu/SP <br>
         </p>
         <a href="mailto:contato@residencialcenarium.com.br">contato@residencialcenarium.com.br</a>
