--- a/quem-somos.html
+++ b/quem-somos.html
@@ -37,7 +37,7 @@
             É um lugar, um estilo, um modo de viver com consciência.
             </p>
 
-            <p class="dois">Somos integração, sustentabilidade e conservação. Somos biodiversos, somos respeito, amamos a terra.
+            <p class="dois">Somos integração, conservação, sustentabilidade. Somos biodiversos, somos respeito, amamos a terra.
             Temos a grata responsabilidade de unir, fortalecer e conscientizar nossos pares sobre a importância dessa relação ecológica.
             Tornar pessoas melhores transforma o mundo.
             </p>
