--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
             <picture class="cenarium">
                 <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
+                <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
             </picture>
     
             <h1>Inspire<span>-se</span></h1>
@@ -54,7 +54,7 @@
 
             <div class="bolas">
                 <img class="bola3" src="imagens/image6.jpg" alt="">
-                <img class="bola2"src="imagens/image15.jpg" alt="">
+                <img class="bola2"src="imagens/image15.JPG" alt="">
             </div>
         </section>
         
