--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="bolas">
                 <img class="bola3" src="imagens/image6.jpg" alt="">
-                <img class="bola2"src="imagens/image15.JPG" alt="">
+                <img class="bola2"src="imagens/piscina-bola.jpg" alt="">
             </div>
         </section>
         
