--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
   
     <main>
         <section class="inspiracao">
-            <div>
+            <div class="texto1">
                 <p>Boas práticas junto a natureza.
                 Esse é o nosso comprometimento.
-                Olhamos para um futuro onde as pessoas estejam fortemente engajadas e totalmente integradas ao ecossistema, valorizando, preservando o meio ambiente como um presente para as futuras gerações.
+                Olhamos para um futuro onde as pessoas estejam fortemente engajadas e totalmente integradas ao ecossistema, valorizando, preservando o meio ambiente como um presente para as futuras gerações. <br>
                 Cultivamos um corredor verde harmonizando e respeitando fauna e flora. Conectamos a vida. Nos conectamos. <br>
                 Cenarium!
                 Um lugar de inspiração…
                 e de respeito a natureza.
                 </p>
-                <img class="bola1"src="imagens/bola3.jpg" alt="">
             </div>
 
             <div class="bolas">
-                <img class="bola3" src="imagens/image6.jpg" alt="">
-                <img class="bola2"src="imagens/piscina-bola.jpg" alt="">
+                <div><img class="bola1"src="imagens/breve3.png" alt=""></div>
+                <div><img class="bola2" src="imagens/breve4.png" alt=""></div>
+                <div><img class="bola3"src="imagens/breve1.png" alt=""></div>
             </div>
         </section>
         
