--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
             <picture class="cenarium">
-                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
+                <!-- <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg"> -->
                 <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
             </picture>
     
