--- a/index.html
+++ b/index.html
@@ -29,16 +29,29 @@
                 <li><a href="area-do-usuario.html">Área do usuário</a></li>
             </ul>
         </nav>
-            <picture class="cenarium">
-                <!-- <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg"> -->
+            <!-- <picture class="cenarium">
+                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
                 <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
-            </picture>
+            </picture> -->
+
+            <!-- AQUI ESTÁ COMO FOI FEITO NO SITE DO ANDROID.
+                
+                <picture>
+                <source media="(max-width: 700px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+                <img src="imagens/dan-droids.png" alt="Primeiro mascote do Android">
+            </picture> 
+            -->
     
-            <h1>Inspire<span>-se</span></h1>
+            <!-- <h1>Inspire<span>-se</span></h1> -->
     </header>
 
   
     <main>
+        <picture class="cenarium">
+            <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
+            <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
+        </picture>
+        <h1>Inspire<span>-se</span></h1>
         <section class="inspiracao">
             <div class="texto1">
                 <p>Boas práticas junto a natureza.
