--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
                 <li><a href="area-do-usuario.html">Área do usuário</a></li>
             </ul>
         </nav>
-            <!-- <picture class="cenarium">
-                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
-            </picture> -->
+            <section class="cenarium">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
+                    <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
+                </picture>
+            </section>
 
             <!-- AQUI ESTÁ COMO FOI FEITO NO SITE DO ANDROID.
                 
@@ -47,8 +49,12 @@
 
   
     <main>
-
-        <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
+        <section class="cenarium">
+            <picture>
+                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
+                <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
+            </picture>
+        </section>
         <h1>Inspire<span>-se</span></h1>
         <section class="inspiracao">
             <div class="texto1">
