--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </nav>
             <section class="cenarium">
                 <picture>
-                    <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                    <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
+                    <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.JPG" type="image/jpg">
+                    <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
                 </picture>
             </section>
 
@@ -44,18 +44,11 @@
             </picture> 
             -->
     
-            <!-- <h1>Inspire<span>-se</span></h1> -->
+            <h1>Inspire<span>-se</span></h1>
     </header>
 
   
     <main>
-        <section class="cenarium">
-            <picture>
-                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
-            </picture>
-        </section>
-        <h1>Inspire<span>-se</span></h1>
         <section class="inspiracao">
             <div class="texto1">
                 <p>Boas práticas junto a natureza.
