--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
             <section class="cenarium">
                 <picture>
-                    <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.JPG" type="image/jpg">
+                    <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
                     <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
                 </picture>
             </section>
