--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
                 <li><a href="area-do-usuario.html">Área do usuário</a></li>
             </ul>
         </nav>
-            <section class="cenarium">
-                <picture>
-                    <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                    <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
-                </picture>
-            </section>
+            <picture class="cenarium">
+                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
+                <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
+            </picture>
 
             <!-- AQUI ESTÁ COMO FOI FEITO NO SITE DO ANDROID.
                 
