--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <div class="contato">
-            <img src="imagens/foto-contato2.jpg" alt="foto-capa">
+            <img src="imagens/foto-contato.jpg" alt="foto-capa">
         </div>
     </header>
   
