--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             </div>
 
             <div class="bolas">
-                <div><img class="bola1"src="imagens/breve3.png" alt=""></div>
-                <div><img class="bola2" src="imagens/breve1.png" alt=""></div>
-                <div><img class="bola3"src="imagens/breve1.png" alt=""></div>
+                <div><img class="bola1"src="imagens/bola1.png" alt=""></div>
+                <div><img class="bola2" src="imagens/bola3.png" alt=""></div>
+                <div><img class="bola3"src="imagens/bola2.png" alt=""></div>
             </div>
         </section>
         
