--- a/quem-somos.html
+++ b/quem-somos.html
@@ -44,9 +44,9 @@
 
             <p class="tres">Cenarium é singular.
             Conheça nossas práticas, entre em contato e venha viver em perfeito equilíbrio, cultivando paz e harmonia e tornando-se parte desse universo de amor a vida.
-            Aqui não construímos muros.
-            Aqui…nos cercamos de natureza.
-            Aqui, não somos tudo.
+            Aqui...não construímos muros. <br>
+            Aqui...nos cercamos de natureza. <br>
+            Aqui...não somos tudo. <br>
             Somos parte de um todo.
             </p>
         </section>
