--- a/area-do-usuario.html
+++ b/area-do-usuario.html
@@ -47,7 +47,7 @@
         </span>
         <img class="logo-rodape" src="imagens/logo.png" alt="logo">
         <span class="texto-a-direita">
-        <p>Desenvolvido por <a href="https://panabaker.com.br" target="_blank">PWA WEB</a></p>
+        <p>Desenvolvido por <a href="#" target="_blank">PWA WEB</a></p>
         </span>
     </div>
    </footer>
