--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
             </picture> -->
             <picture class="cenarium">
-                <source media="(min-width: 768px)" srcset="imagens/foto-principal.JPG" type="image/jpg">
-                <img src="imagens/foto-principal-pq.jpg" alt="Foto-empreendimento">
+                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
+                <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
             </picture>
 
             <!-- AQUI ESTÁ COMO FOI FEITO NO SITE DO ANDROID.
