--- a/area-do-usuario.html
+++ b/area-do-usuario.html
@@ -35,7 +35,7 @@
             <!-- <img src="imagens/breve4.png" alt="em breve"> -->
             <picture>
                 <source media="(max-width: 768px)" srcset="imagens/breve2.png" type="image/png">
-                <img src="imagens/breve1.png" alt="Foto do empreendimento">
+                <img src="imagens/breve1.png" alt="mirante">
             </picture>
         </section>
     </main>
