--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </picture> -->
             <picture class="cenarium">
                 <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                <img src="imagens/foto-principal.jpg" alt="Foto-empreendimento">
+                <img src="imagens/foto-principal.jpg" alt="foto-panoramica">
             </picture>
 
             <!-- AQUI ESTÁ COMO FOI FEITO NO SITE DO ANDROID.
