--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                 <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
                 <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
             </picture> -->
-            <picture class="cenarium">
-                <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
-                <img src="imagens/foto-principal.jpg" alt="foto-panoramica">
-            </picture>
+            <section class="cenarium">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
+                    <img src="imagens/foto-principal.jpg" alt="foto-panoramica">
+                </picture>
+            </section>
 
             <!-- AQUI ESTÁ COMO FOI FEITO NO SITE DO ANDROID.
                 
