--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
                 <img src="imagens/foto-principal.JPG" alt="Foto-empreendimento">
             </picture> -->
             <section class="cenarium">
-                <picture>
+                <!-- <picture>
                     <source media="(max-width: 768px)" srcset="imagens/foto-principal-pq.jpg" type="image/jpg">
                     <img src="imagens/foto-principal.jpg" alt="foto-panoramica">
+                </picture> -->
+                <picture>
+                    <source media="(max-width: 768px)" srcset="imagens/breve2.png" type="image/png">
+                    <img src="imagens/breve1.png" alt="mirante">
                 </picture>
             </section>
 
