teste de imagem

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </picture> -->
                 <picture>
                     <source media="(max-width: 768px)" srcset="imagens/breve2.png" type="image/png">
-                    <img src="imagens/breve1.png" alt="mirante">
+                    <img src="imagens/imagem-home copy.png" alt="mirante">
                 </picture>
             </section>
 
