--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <img src="imagens/foto-principal.jpg" alt="foto-panoramica">
                 </picture> -->
                 <picture>
-                    <source media="(max-width: 768px)" srcset="imagens/home-img-pq.jpg" type="image/jpg">
-                    <img src="imagens/home-img.jpg" alt="paisagem">
+                    <source media="(min-width: 768px)" srcset="imagens/home-img.jpg" type="image/jpg">
+                    <img src="imagens/home-img-pq.jpg" alt="paisagem">
                 </picture>
             </section>
 
