--- a/area-do-usuario.html
+++ b/area-do-usuario.html
@@ -32,10 +32,9 @@
   
     <main>  
         <section class="usuario">
-            <!-- <img src="imagens/breve4.png" alt="em breve"> -->
             <picture>
-                <source media="(max-width: 768px)" srcset="imagens/breve2.png" type="image/png">
-                <img src="imagens/breve1.png" alt="mirante">
+                <source media="(max-width: 768px)" srcset="imagens/breve2.webp" type="image/png">
+                <img src="imagens/breve1.webp" alt="mirante">
             </picture>
         </section>
     </main>
@@ -47,7 +46,7 @@
         </span>
         <img class="logo-rodape" src="imagens/logo.png" alt="logo">
         <span class="texto-a-direita">
-        <p>Desenvolvido por <a href="#" target="_blank">PWA WEB</a></p>
+        <p>Desenvolvido por <a href="https://residencialcenarium.com.br" target="_blank">PWA WEB</a></p>
         </span>
     </div>
    </footer>
