--- a/galeria.html
+++ b/galeria.html
@@ -63,40 +63,40 @@
 
         <section class="container-galeria">
             <a class="item-galeria w-2" href="#image1">
-                <img src="imagens/image1.jpg" alt="" class="img-galeria">
+                <img src="imagens/image1.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image2">
-                <img src="imagens/image2.jpg" alt="" class="img-galeria">
+                <img src="imagens/image2.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image3">
-                <img src="imagens/image3.jpg" alt="" class="img-galeria">
+                <img src="imagens/image3.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image4">
-                <img src="imagens/image4.jpg" alt="" class="img-galeria">
+                <img src="imagens/image4.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image5">
-                <img src="imagens/image5.jpg" alt="" class="img-galeria">
+                <img src="imagens/image5.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image6">
-                <img src="imagens/image6.jpg" alt="" class="img-galeria">
+                <img src="imagens/image6.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image7">
-                <img src="imagens/image7.jpg" alt="" class="img-galeria">
+                <img src="imagens/image7.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria w-2" href="#image8">
-                <img src="imagens/image8.jpg" alt="" class="img-galeria">
+                <img src="imagens/image8.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image9">
-                <img src="imagens/image9.jpg" alt="" class="img-galeria">
+                <img src="imagens/image9.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria w-2" href="#image10">
-                <img src="imagens/image10.jpg" alt="" class="img-galeria">
+                <img src="imagens/image10.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image11">
-                <img src="imagens/image11.jpg" alt="" class="img-galeria">
+                <img src="imagens/image11.webp" alt="" class="img-galeria">
             </a>
             <a class="item-galeria" href="#image12">
-                <img src="imagens/image12.jpg" alt="" class="img-galeria">
+                <img src="imagens/image12.webp" alt="" class="img-galeria">
             </a>
         </section>
 
@@ -104,84 +104,84 @@
 
         <div class="lightbox" id="image1">
             <a href="#image12" class="next">&#171;</a>
-            <img src="imagens/image1.jpg"/>
+            <img src="imagens/image1.webp"/>
             <a href="#image2" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image2">
             <a href="#image1" class="next">&#171;</a>
-            <img src="imagens/image2.jpg"/>
+            <img src="imagens/image2.webp"/>
             <a href="#image3" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image3">
             <a href="#image2" class="next">&#171;</a>
-            <img src="imagens/image3.jpg"/>
+            <img src="imagens/image3.webp"/>
             <a href="#image4" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image4">
             <a href="#image3" class="next">&#171;</a>
-            <img src="imagens/image4.jpg"/>
+            <img src="imagens/image4.webp"/>
             <a href="#image5" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image5">
             <a href="#image4" class="next">&#171;</a>
-            <img src="imagens/image5.jpg"/>
+            <img src="imagens/image5.webp"/>
             <a href="#image6" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image6">
             <a href="#image5" class="next">&#171;</a>
-            <img src="imagens/image6.jpg"/>
+            <img src="imagens/image6.webp"/>
             <a href="#image7" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image7">
             <a href="#image6" class="next">&#171;</a>
-            <img src="imagens/image7.jpg"/>
+            <img src="imagens/image7.webp"/>
             <a href="#image8" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image8">
             <a href="#image7" class="next">&#171;</a>
-            <img src="imagens/image8.jpg"/>
+            <img src="imagens/image8.webp"/>
             <a href="#image9" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image9">
             <a href="#image8" class="next">&#171;</a>
-            <img src="imagens/image9.jpg"/>
+            <img src="imagens/image9.webp"/>
             <a href="#image10" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image10">
             <a href="#image9" class="next">&#171;</a>
-            <img src="imagens/image10.jpg"/>
+            <img src="imagens/image10.webp"/>
             <a href="#image11" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image11">
             <a href="#image10" class="next">&#171;</a>
-            <img src="imagens/image11.jpg"/>
+            <img src="imagens/image11.webp"/>
             <a href="#image12" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
 
         <div class="lightbox" id="image12">
             <a href="#image11" class="next">&#171;</a>
-            <img src="imagens/image12.jpg"/>
+            <img src="imagens/image12.webp"/>
             <a href="#image1" class="next">&#187;</a>
             <a href="#" class="close">X</a>
         </div>
@@ -195,7 +195,7 @@
         </span>
         <img class="logo-rodape" src="imagens/logo.png" alt="logo">
         <span class="texto-a-direita">
-        <p>Desenvolvido por <a href="https://panabaker.com.br" target="_blank">PWA WEB</a></p>
+        <p>Desenvolvido por <a href="https://residencialcenarium.com.br" target="_blank">PWA WEB</a></p>
         </span>
     </div>
    </footer>
