--- a/quem-somos.html
+++ b/quem-somos.html
@@ -59,7 +59,7 @@
         </span>
         <img class="logo-rodape" src="imagens/logo.png" alt="logo">
         <span class="texto-a-direita">
-        <p>Desenvolvido por <a href="https://panabaker.com.br" target="_blank">PWA WEB</a></p>
+        <p>Desenvolvido por <a href="https://residencialcenarium.com.br" target="_blank">PWA WEB</a></p>
         </span>
     </div>
    </footer>
